deployment-sample/istio/istiod-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: istiod-route
  namespace: istio-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cross-network-gateway
    namespace: mesh-services
    sectionName: tls-istiod
  hostnames:
  - "istiod.istio-system.svc"
  rules:
  - backendRefs:
    - name: istiod
      port: 15012
